# packing-optimization

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: Pallets_11.csv  Pallets_12.csv  Pallets_13.csv  Pallets_14.csv  Pallets_15.csv  Pallets_16.csv  Pallets_17.csv  Pallets_18.csv  Pallets_19.csv  Pallets_20.csv  Pallets_21.csv  Pallets_22.csv  Pallets_23.csv  Pallets_24.csv  Pallets_25.csv  Pallets_26.csv  TruckAndPallets_03.csv  TruckAndPallets_11.csv  TruckAndPallets_12.csv  TruckAndPallets_13.csv  TruckAndPallets_14.csv  TruckAndPallets_15.csv  TruckAndPallets_16.csv  TruckAndPallets_17.csv  TruckAndPallets_18.csv  TruckAndPallets_19.csv  TruckAndPallets_20.csv  TruckAndPallets_21.csv  TruckAndPallets_22.csv  TruckAndPallets_23.csv  TruckAndPallets_24.csv  TruckAndPallets_25.csv  TruckAndPallets_26.csv
description/notes/: dataset_15.txt  dataset_16.txt  dataset_17.txt
docs/html/: BatchDataSetManager_8h_source.html  BatchInputManager_8h_source.html  BatchStateManager_8h_source.html  BatchState_8h_source.html  BatchUtils_8h_source.html  BranchAndBound_8h_source.html  BruteForce_8h_source.html  CSVParser_8h_source.html  DPTable_8h_source.html  DynamicProgramming_8h_source.html  Greedy_8h_source.html  HashMapDPTable_8h_source.html  ILPBridgePy_8h_source.html  IntegerLinearProgramming_8h_source.html  Pallet_8h_source.html  ParserUtils_8h_source.html  Truck_8h_source.html  Utils_8h_source.html  VectorDPTable_8h_source.html  annotated.html  classBatchDataSetManager-members.html  classBatchDataSetManager.html  classBatchInputManager-members.html  classBatchInputManager.html  classBatchStateManager-members.html  classBatchStateManager.html  classBranchAndBound-members.html  classBranchAndBound.html  classBruteForce-members.html  classBruteForce.html  classCSVParser-members.html  classCSVParser.html  classDPTable-members.html  classDPTable.html  classDPTable__inherit__graph.map  classDPTable__inherit__graph.md5  classDynamicProgramming-members.html  classDynamicProgramming.html  classGreedy-members.html  classGreedy.html  (+89 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+19 more)
docs/latex/: BatchDataSetManager_8h_source.tex  BatchInputManager_8h_source.tex  BatchStateManager_8h_source.tex  BatchState_8h_source.tex  BatchUtils_8h_source.tex  BranchAndBound_8h_source.tex  BruteForce_8h_source.tex  CSVParser_8h_source.tex  DPTable_8h_source.tex  DynamicProgramming_8h_source.tex  Greedy_8h_source.tex  HashMapDPTable_8h_source.tex  ILPBridgePy_8h_source.tex  IntegerLinearProgramming_8h_source.tex  Pallet_8h_source.tex  ParserUtils_8h_source.tex  Truck_8h_source.tex  Utils_8h_source.tex  VectorDPTable_8h_source.tex  annotated.tex  classBatchDataSetManager.tex  classBatchInputManager.tex  classBatchStateManager.tex  classBranchAndBound.tex  classBruteForce.tex  classCSVParser.tex  classDPTable.tex  classDPTable__inherit__graph.md5  classDynamicProgramming.tex  classGreedy.tex  classHashMapDPTable.tex  classHashMapDPTable__coll__graph.md5  classILPBridgePy.tex  classIntegerLinearProgramming.tex  classPallet.tex  classTruck.tex  classVectorDPTable.tex  classVectorDPTable__coll__graph.md5  files.tex  hierarchy.tex  (+6 more)
docs/reference_materials/: presentation.md
docs/uml/: uml.plantuml
ortools/lib/: libCgl.so.0.60.9  libOsiClp.so.1.17.10  libabsl_bad_variant_access.so.2407.0.0  libabsl_base.so.2407.0.0  libabsl_city.so.2407.0.0  libabsl_civil_time.so.2407.0.0  libabsl_cord.so.2407.0.0  libabsl_cordz_functions.so.2407.0.0  libabsl_cordz_handle.so.2407.0.0  libabsl_cordz_sample_token.so.2407.0.0  libabsl_crc32c.so.2407.0.0  libabsl_crc_cord_state.so.2407.0.0  libabsl_crc_cpu_detect.so.2407.0.0  libabsl_die_if_null.so.2407.0.0  libabsl_flags_commandlineflag_internal.so.2407.0.0  libabsl_flags_internal.so.2407.0.0  libabsl_flags_marshalling.so.2407.0.0  libabsl_flags_private_handle_accessor.so.2407.0.0  libabsl_flags_program_name.so.2407.0.0  libabsl_flags_usage.so.2407.0.0  libabsl_hash.so.2407.0.0  libabsl_leak_check.so.2407.0.0  libabsl_log_entry.so.2407.0.0  libabsl_log_flags.so.2407.0.0  libabsl_log_globals.so.2407.0.0  libabsl_log_internal_check_op.so.2407.0.0  libabsl_log_internal_conditions.so.2407.0.0  libabsl_log_internal_format.so.2407.0.0  libabsl_log_internal_message.so.2407.0.0  libabsl_log_sink.so.2407.0.0  libabsl_periodic_sampler.so.2407.0.0  libabsl_poison.so.2407.0.0  libabsl_random_internal_distribution_test_util.so.2407.0.0  libabsl_random_internal_platform.so.2407.0.0  libabsl_random_internal_randen.so.2407.0.0  libabsl_random_internal_randen_hwaes.so.2407.0.0  libabsl_random_internal_randen_slow.so.2407.0.0  libabsl_random_internal_seed_material.so.2407.0.0  libabsl_random_seed_gen_exception.so.2407.0.0  libabsl_random_seed_sequences.so.2407.0.0  (+11 more)
output/: OptimalSolution_06.txt
reference_materials/: presentation.md
reference_materials/notes/: bb.md  bf.md  bt.md  dataset_06.txt  dataset_17.txt  dp_hashmap.md  dp_optimized.md  dp_vector.md  greedy_approx.md  ilp_cpp.md  ilp_py.md  times.csv
src/: Utils.cpp  Utils.h  main.cpp
src/Algorithms/: BruteForce.cpp  BruteForce.h  DynamicProgramming.cpp  DynamicProgramming.h  Greedy.cpp  Greedy.h  ILPBridge.cpp  ILPBridge.h
src/Batch/: BatchDataSetManager.cpp  BatchDataSetManager.h  BatchInputManager.cpp  BatchInputManager.h  BatchProcessor.h  BatchState.h  BatchStateManager.cpp  BatchStateManager.h  BatchUtils.cpp  BatchUtils.h
src/BatchProcessor/: BatchDataSetManager.cpp  BatchDataSetManager.h  BatchInputManager.cpp  BatchInputManager.h  BatchProcessor.cpp  BatchProcessor.h
src/DataParser/: CSVParser.h  DistanceParser.h  LocationParser.h  ParserUtils.cpp  ParserUtils.h  data_parser.h
src/DataStructures/: Graph.h  Pallet.cpp  Pallet.h  Truck.cpp  Truck.h  UFDS.cpp
src/Parser/: CSVParser.cpp  CSVParser.h  ParserUtils.h
src/RoutePlanning/: RouteProcessor.cpp  RouteProcessor.h  algorithms.h  location.cpp  location.h  route.cpp  route.h
(+159 files in other folders)
